--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,13 @@
+body {
+  background: #0074D9;
+  color: #fff;
+}
+
 .App {
   text-align: center;
   padding: 5%
+}
+
+.App-title {
+  font-size: 26px;
 }
